# ChangeLog for x11-plugins/imgur-integration
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Feb 2011; Dean Matzkov <bapabooiee@gmail.com>
  imgur-integration-9999.ebuild:
  Updated bleeding-edge ebuild.

  23 Jan 2011; Dean Matzkov <bapabooiee@gmail.com>
  -imgur-integration-0.3.0.ebuild, imgur-integration-9999.ebuild:
  Removed v0.3.0, since it's now in Sunrise. Polished-up v9999.

  20 Jan 2011; Dean Matzkov (bapa) <bapabooiee@gmail.com>
  imgur-integration-9999.ebuild:
  Masked live version, since it's usually broken

*imgur-integration-9999 (18 Jan 2011)

  18 Jan 2011; Dean Matzkov <bapabooiee@gmail.com>
  +imgur-integration-9999.ebuild, +metadata.xml:
  New WiP ebuild: x11-plugins/imgur-integration
