@@ -1,3 +1,3 @@
-EBUILD imgur-integration-9999.ebuild 1303 RMD160 c04b194f58899b1550328173536aef3b60640982 SHA1 8a3ce8ff98323f1264e1d34302885e9d2993347e SHA256 0d4f7adc46ecb2fa906dda305e15dd164a564cef0b3a05a74b104f5582f306c0
-MISC ChangeLog 758 RMD160 41251290d75f360f2c9608077511dc21f10390f7 SHA1 3016f85cf9f70d5fde23b1de2abbff4b45f740b1 SHA256 8edc3410537ffdf6f66e776d1db6c9709a8b2d9aee525692f63b09e15053accc
+EBUILD imgur-integration-9999.ebuild 1519 RMD160 19a9c19a4846981c6bd1b6248f0ae2ca2e4aa541 SHA1 ddb9839373bc03fccc6beb1e0ad017eb75ba9611 SHA256 7395e896c06068c4efe1a8e0a71aa9aed742f4faa616ff4f8b57b2047da2bb88
+MISC ChangeLog 909 RMD160 3a5d9db33b2c31b2222459f7589a5a1621978c63 SHA1 f9698e258c2884049a6016454253f047b7c20f03 SHA256 2d5130b2778364fddf09f7fd4dd1c31958d8d3857f32a8c497363b031661212a
 MISC metadata.xml 318 RMD160 9b0184a48e30234241f34ffb077c90d1948e26d2 SHA1 614fa9d995dd9505fdc07a34a24f169930c13bfc SHA256 32fecb4577347fc4efbcd8fc2ea3d8144d8fe9a3c9037e0400dbb14c5adb40f1
